--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -1063,3 +1063,6 @@ outputs:
         template: "IP:11211"
         params:
           IP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, MemcachedNetwork]}]}
+  config_identifier:
+    description: identifier which changes if the controller configuration may need re-applying
+    value: {get_attr: [ControllerDeployment, deploy_stdout]}
