--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -4,6 +4,10 @@ description: 'OpenStack swift storage node post deployment for Puppet'
 parameters:
   servers:
     type: json
+  NodeConfigIdentifiers:
+     type: json
+     description: Value which changes if the node configuration may need to be re-applied
+
 
 resources:
 
@@ -21,6 +25,8 @@ resources:
     properties:
       servers:  {get_param: servers}
       config: {get_resource: StoragePuppetConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   StorageRingbuilderPuppetConfig:
     type: OS::Heat::SoftwareConfig
@@ -37,6 +43,8 @@ resources:
     properties:
       servers:  {get_param: servers}
       config: {get_resource: StorageRingbuilderPuppetConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
