--- a/compute-post.yaml
+++ b/compute-post.yaml
@@ -6,6 +6,9 @@ description: 'Compute Post Deployment'
 parameters:
   servers:
     type: json
+  NodeConfigIdentifiers:
+     type: json
+     description: Value which changes if the node configuration may need to be re-applied
 
 resources:
 
