--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -513,3 +513,7 @@ outputs:
     description: Heat resource handle for the Nova compute server
     value:
       {get_resource: NovaCompute}
+  config_identifier:
+    description: identifier which changes if the node configuration may need re-applying
+    value: {get_attr: [NovaComputeDeployment, deploy_stdout]}
+
