--- a/puppet/controller-post-puppet.yaml
+++ b/puppet/controller-post-puppet.yaml
@@ -6,6 +6,10 @@ description: >
 parameters:
   servers:
     type: json
+  NodeConfigIdentifiers:
+     type: json
+     description: Value which changes if the node configuration may need to be re-applied
+
 
 resources:
 
@@ -23,6 +27,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 1
+        update_identifier: {get_param: NodeConfigIdentifiers}
       actions: ['CREATE'] # no need for two passes on an UPDATE
 
   ControllerServicesBaseDeployment_Step2:
@@ -33,6 +38,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 2
+        update_identifier: {get_param: NodeConfigIdentifiers}
       actions: ['CREATE'] # no need for two passes on an UPDATE
 
   ControllerRingbuilderPuppetConfig:
@@ -54,6 +60,8 @@ resources:
     properties:
       servers:  {get_param: servers}
       config: {get_resource: ControllerRingbuilderPuppetConfig}
+      input_values:
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   ControllerOvercloudServicesDeployment_Step4:
     type: OS::Heat::StructuredDeployments
@@ -63,6 +71,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 3
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   ControllerOvercloudServicesDeployment_Step5:
     type: OS::Heat::StructuredDeployments
@@ -72,6 +81,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 4
+        update_identifier: {get_param: NodeConfigIdentifiers}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
