Flexible IP allocations for isolated nets
This patch adds new '<net name>AllocationPool' parameters
to all of the isolated network nested stacks so that users
can easily control the allocation ranges on these networks.

Change-Id: I44b564831446c62e3489a69d992e0fb1f642b085

--- a/network/external.yaml
+++ b/network/external.yaml
@@ -33,7 +33,10 @@ parameters:
     default: external_subnet
     description: The name of the external subnet in Neutron.
     type: string
-
+  ExternalAllocationPools:
+    default: [{'start': '10.0.0.4', 'end': '10.0.0.250'}]
+    description: Ip allocation pool range for the external network.
+    type: json
 
 resources:
   ExternalNetwork:
@@ -51,6 +54,7 @@ resources:
       enable_dhcp: {get_param: ExternalNetEnableDHCP}
       name: {get_param: ExternalSubnetName}
       network: {get_resource: ExternalNetwork}
+      allocation_pools: {get_resource: ExternalAllocationPools}
 
 outputs:
   OS::stack_id:
