--- a/network/internal_api.yaml
+++ b/network/internal_api.yaml
@@ -33,6 +33,10 @@ parameters:
     default: internal_api_subnet
     description: The name of the internal API subnet in Neutron.
     type: string
+  InternalApiAllocationPools:
+    default: [{'start': '172.16.2.4', 'end': '172.16.2.250'}]
+    description: Ip allocation pool range for the internal API network.
+    type: json
 
 resources:
   InternalApiNetwork:
@@ -50,6 +54,7 @@ resources:
       enable_dhcp: {get_param: InternalApiNetEnableDHCP}
       name: {get_param: InternalApiSubnetName}
       network: {get_resource: InternalApiNetwork}
+      allocation_pools: {get_param: InternalApiAllocationPools}
 
 outputs:
   OS::stack_id:
