--- a/network/storage.yaml
+++ b/network/storage.yaml
@@ -33,6 +33,10 @@ parameters:
     default: storage_subnet
     description: The name of the storage subnet in Neutron.
     type: string
+  StorageAllocationPools:
+    default: [{'start': '172.16.1.4', 'end': '172.16.1.250'}]
+    description: Ip allocation pool range for the storage network.
+    type: json
 
 resources:
   StorageNetwork:
@@ -50,6 +54,7 @@ resources:
       enable_dhcp: {get_param: StorageNetEnableDHCP}
       name: {get_param: StorageSubnetName}
       network: {get_resource: StorageNetwork}
+      allocation_pools: {get_param: StorageAllocationPools}
 
 outputs:
   OS::stack_id:
