--- a/network/tenant.yaml
+++ b/network/tenant.yaml
@@ -33,6 +33,10 @@ parameters:
     default: tenant_subnet
     description: The name of the tenant subnet in Neutron.
     type: string
+  TenantAllocationPools:
+    default: [{'start': '172.16.0.4', 'end': '172.16.0.250'}]
+    description: Ip allocation pool range for the tenant network.
+    type: json
 
 resources:
   TenantNetwork:
@@ -50,6 +54,7 @@ resources:
       enable_dhcp: {get_param: TenantNetEnableDHCP}
       name: {get_param: TenantSubnetName}
       network: {get_resource: TenantNetwork}
+      allocation_pools: {get_param: TenantAllocationPools}
 
 outputs:
   OS::stack_id:
