--- a/network/storage_mgmt.yaml
+++ b/network/storage_mgmt.yaml
@@ -33,6 +33,10 @@ parameters:
     default: storage_mgmt_subnet
     description: The name of the Storage management subnet in Neutron.
     type: string
+  StorageMgmtAllocationPools:
+    default: [{'start': '172.16.3.4', 'end': '172.16.3.250'}]
+    description: Ip allocation pool range for the storage mgmt network.
+    type: json
 
 resources:
   StorageMgmtNetwork:
@@ -50,6 +54,7 @@ resources:
       enable_dhcp: {get_param: StorageMgmtNetEnableDHCP}
       name: {get_param: StorageMgmtSubnetName}
       network: {get_resource: StorageMgmtNetwork}
+      allocation_pools: {get_param: StorageMgmtAllocationPools}
 
 outputs:
   OS::stack_id:
