Add $hostname.localdomain alias to /etc/hosts
We want to make sure to be able to resolve the default domain
suffix (.localdomain) appended when no domain option is passed by
the dhcp server.

Change-Id: I33111e91b502f57da442e5745de2217bd6d2d882

--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -138,7 +138,7 @@ outputs:
   hosts_entry:
     value:
       str_replace:
-        template: "IP HOST"
+        template: "IP HOST.localdomain HOST"
         params:
           IP: {get_attr: [CephStorage, networks, ctlplane, 0]}
           HOST: {get_attr: [CephStorage, name]}
