--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -505,7 +505,7 @@ outputs:
       Server's IP address and hostname in the /etc/hosts format
     value:
       str_replace:
-        template: "IP HOST"
+        template: "IP HOST.localdomain HOST"
         params:
           IP: {get_attr: [NovaCompute, networks, ctlplane, 0]}
           HOST: {get_attr: [NovaCompute, name]}
