--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -1040,7 +1040,7 @@ outputs:
       Server's IP address and hostname in the /etc/hosts format
     value:
       str_replace:
-        template: IP HOST CLOUDNAME
+        template: IP HOST.localdomain HOST CLOUDNAME
         params:
           IP: {get_attr: [Controller, networks, ctlplane, 0]}
           HOST: {get_attr: [Controller, name]}
