Fix allocation pool in external.yaml
The file network/external.yaml has a typo in the last commit. It
should have been a get_param instead of a get_resource. This
change fixes that line in that file.

Change-Id: Ibc0db0510e9b5dae3c4669a620c642357906cbc2

--- a/network/external.yaml
+++ b/network/external.yaml
@@ -54,7 +54,7 @@ resources:
       enable_dhcp: {get_param: ExternalNetEnableDHCP}
       name: {get_param: ExternalSubnetName}
       network: {get_resource: ExternalNetwork}
-      allocation_pools: {get_resource: ExternalAllocationPools}
+      allocation_pools: {get_param: ExternalAllocationPools}
 
 outputs:
   OS::stack_id:
