Enable httpd balancing for Horizon
We need to customize the default apache::ip param or the default
vhost configured will listen on ::80

Change-Id: I195a083f727da940841beb3a0c37dade02c6d1ca

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -971,6 +971,7 @@ resources:
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
 
                 # Horizon
+                apache::ip: {get_input: horizon_network}
                 horizon::django_debug: {get_input: debug}
                 horizon::secret_key: {get_input: horizon_secret}
                 horizon::bind_address: {get_input: horizon_network}
