--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -691,6 +691,12 @@ resources:
         ceilometer_backend: {get_param: CeilometerBackend}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
+        ceilometer_coordination_url:
+          list_join:
+            - ''
+            - - 'redis://'
+              - {get_param: RedisVirtualIP}
+              - ':6379'
         ceilometer_dsn:
           list_join:
             - ''
@@ -949,6 +955,7 @@ resources:
                 ceilometer::api::keystone_identity_uri: {get_input: keystone_identity_uri}
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 ceilometer::agent::auth::auth_url: {get_input: keystone_auth_address}
+                ceilometer::agent::central::coordination_url: {get_input: ceilometer_coordination_url}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
 
