Use SoftwareDeployments for consistency in extraconfig
Currently we've got a mix of SoftwareConfig resource with
StructuredDeployments resources - while this will work it's
inconsistent and normally using the corresponding
SoftwareDeployments resouce is encourgaged instead.

Change-Id: I308d62d4ff491c073e3e8650fd4c2c65bf96d14a

--- a/extraconfig/post_deploy/example.yaml
+++ b/extraconfig/post_deploy/example.yaml
@@ -20,7 +20,7 @@ resources:
         echo "extra" > /root/extra
 
   ExtraDeployments:
-    type: OS::Heat::StructuredDeployments
+    type: OS::Heat::SoftwareDeployments
     properties:
       servers:  {get_param: servers}
       config: {get_resource: ExtraConfig}
