--- a/extraconfig/post_deploy/rhel-registration/rhel-registration.yaml
+++ b/extraconfig/post_deploy/rhel-registration/rhel-registration.yaml
@@ -71,7 +71,7 @@ resources:
       config: {get_file: scripts/rhel-registration}
 
   RHELRegistrationDeployment:
-    type: OS::Heat::StructuredDeployments
+    type: OS::Heat::SoftwareDeployments
     properties:
       servers:  {get_param: servers}
       config: {get_resource: RHELRegistration}
@@ -104,7 +104,7 @@ resources:
         - name: REG_METHOD
 
   RHELUnregistrationDeployment:
-    type: OS::Heat::StructuredDeployments
+    type: OS::Heat::SoftwareDeployments
     properties:
       servers:  {get_param: servers}
       config: {get_resource: RHELUnregistration}
