Wire in Controller pre-deployment extraconfig
The recently added cinder-netapp extraconfig contains some additional
hieradata which needs to be applied during the initial pre-deployment
phase, e.g in controller-puppet.yaml (before the manifests are applied)
so wire in a new OS::TripleO::ControllerExtraConfigPre provider resource
which allows passing in a nested stack (empty by default) which contains
any required "pre deployment" extraconfig, such as applying this hieradata.

Some changes were required to the cinder-netapp extraconfig and environment
such that now the hieradata is actually applied, and the parameter_defaults
specified will be correctly mapped into the StructuredDeployment.

Change-Id: I8838a71db9447466cc84283b0b257bdb70353ffd

--- a/environments/cinder-netapp-config.yaml
+++ b/environments/cinder-netapp-config.yaml
@@ -1,30 +1,29 @@
 # A Heat environment file which can be used to enable a
-# a Cinder NetApp backend.
+# a Cinder NetApp backend, configured via puppet
 resource_registry:
-  OS::TripleO::Controller::CinderBackend: extraconfig/controller/cinder-netapp.yaml
+  OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
 
 parameter_defaults:
-  CinderBackendConfig:
-    CinderEnableNetappBackend: false
-    CinderNetappBackendName: 'tripleo_netapp'
-    CinderNetappLogin: ''
-    CinderNetappPassword: ''
-    CinderNetappServerHostname: ''
-    CinderNetappServerPort: '80'
-    CinderNetappSizeMultiplier: '1.2'
-    CinderNetappStorageFamily: 'ontap_cluster'
-    CinderNetappStorageProtocol: 'nfs'
-    CinderNetappTransportType: 'http'
-    CinderNetappVfiler: ''
-    CinderNetappVolumeList: ''
-    CinderNetappVserver: ''
-    CinderNetappPartnerBackendName: ''
-    CinderNetappNfsShares: ''
-    CinderNetappNfsSharesConfig: '/etc/cinder/shares.conf'
-    CinderNetappNfsMountOptions: ''
-    CinderNetappCopyOffloadToolPath: ''
-    CinderNetappControllerIps: ''
-    CinderNetappSaPassword: ''
-    CinderNetappStoragePools: ''
-    CinderNetappEseriesHostType: 'linux_dm_mp'
-    CinderNetappWebservicePath: '/devmgr/v2'
+  CinderEnableNetappBackend: false
+  CinderNetappBackendName: 'tripleo_netapp'
+  CinderNetappLogin: ''
+  CinderNetappPassword: ''
+  CinderNetappServerHostname: ''
+  CinderNetappServerPort: '80'
+  CinderNetappSizeMultiplier: '1.2'
+  CinderNetappStorageFamily: 'ontap_cluster'
+  CinderNetappStorageProtocol: 'nfs'
+  CinderNetappTransportType: 'http'
+  CinderNetappVfiler: ''
+  CinderNetappVolumeList: ''
+  CinderNetappVserver: ''
+  CinderNetappPartnerBackendName: ''
+  CinderNetappNfsShares: ''
+  CinderNetappNfsSharesConfig: '/etc/cinder/shares.conf'
+  CinderNetappNfsMountOptions: ''
+  CinderNetappCopyOffloadToolPath: ''
+  CinderNetappControllerIps: ''
+  CinderNetappSaPassword: ''
+  CinderNetappStoragePools: ''
+  CinderNetappEseriesHostType: 'linux_dm_mp'
+  CinderNetappWebservicePath: '/devmgr/v2'
