Fix Puppet Configuring NetApp Cinder Backend
It was incorrectly assumed that Puppet variables assigned to a
defined class (as seen in cinder-netapp.yaml) would be applied to
any resources created with that type. This is not how Puppet works.

The full range of configuration parameters to cinder::backend::netapp
have been added back in. They are still pulling from Hiera like they
were intended before, but it needs to be a little more explicit for
Puppet to be happy.

Change-Id: I2e00eae829713b2dbb1e4a5f296b6d08d0c21100

--- a/environments/cinder-netapp-config.yaml
+++ b/environments/cinder-netapp-config.yaml
@@ -4,7 +4,7 @@ resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
 
 parameter_defaults:
-  CinderEnableNetappBackend: false
+  CinderEnableNetappBackend: true
   CinderNetappBackendName: 'tripleo_netapp'
   CinderNetappLogin: ''
   CinderNetappPassword: ''
