--- a/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
@@ -9,8 +9,8 @@ parameters:
 
   # Config specific parameters, to be provided via parameter_defaults
   CinderEnableNetappBackend:
-    type: string
-    default: false
+    type: boolean
+    default: true
   CinderNetappBackendName:
     type: string
     default: 'tripleo_netapp'
@@ -89,7 +89,7 @@ resources:
                 cinder::backend::netapp::title: {get_input: NetappBackendName}
                 cinder::backend::netapp::netapp_login: {get_input: NetappLogin}
                 cinder::backend::netapp::netapp_password: {get_input: NetappPassword}
-                cinder::backend::netapp::netapp_hostname: {get_input: NetappServerHostname}
+                cinder::backend::netapp::netapp_server_hostname: {get_input: NetappServerHostname}
                 cinder::backend::netapp::netapp_server_port: {get_input: NetappServerPort}
                 cinder::backend::netapp::netapp_size_multiplier: {get_input: NetappSizeMultiplier}
                 cinder::backend::netapp::netapp_storage_family: {get_input: NetappStorageFamily}
