--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -406,7 +406,7 @@ resources:
                 neutron_public_interface_raw_device: {get_input: neutron_public_interface_raw_device}
                 admin_password: {get_input: admin_password}
                 ntp::servers: {get_input: ntp_servers}
-                enable_package_install: {get_input: enable_package_install}
+                tripleo::packages::enable_install: {get_input: enable_package_install}
 
   NovaComputeDeployment:
     type: OS::TripleO::SoftwareDeployment
