Do not set explicitly galera_master to any of the nodes
We will manage nodes membership using the clustercheck script and
marking all backends as backup, see change:
I7199c7e5d759a76f58c0f48b40e9d460a3163886

Related-Bug: 1467918
Change-Id: I56ebd2d8405ac35c707666d993b396f04aeb683e

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -90,13 +90,10 @@ pacemaker::corosync::manage_fw: false
 horizon::allowed_hosts: '*'
 horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
 
-
+# mysql
 mysql::server::manage_config_file: true
 mysql::server::package_name: mariadb-galera-server
 
-
-tripleo::loadbalancer::galera_master_ip: "%{hiera('bootstrap_nodeid_ip')}"
-tripleo::loadbalancer::galera_master_hostname: "%{hiera('bootstrap_nodeid')}"
 
 tripleo::loadbalancer::keystone_admin: true
 tripleo::loadbalancer::keystone_public: true
