Set MariaDB package name in RedHat.yaml
This moves the hard coded package name for mariadb into
the RedHat specific hieradata file. This was recently added
to controller.yaml in a1b3fa3e84185b6969a8acfda475fe7fc48bd5a1.

Also, resolves an issue where RedHat.yaml wasn't actually
getting deployed. This is something that should have happened
in 5009cc64322e9fb5723799eb9fbd79076a2dc5da.

Change-Id: Iaa30be3c53a7c54d31d47b997966b0106a202ea4

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -78,6 +78,8 @@ resources:
               - {get_param: ceph_storage_hosts}
         hiera:
           datafiles:
+            RedHat:
+              raw_data: {get_file: hieradata/RedHat.yaml}
             all_nodes:
               mapped_data:
                 controller_node_ips:
